console.error('ERR'
[eval]:1
require('./tests/api-test/suites/auth.test.js')().then(r=,JSON.stringify({pass:r.filter(x===='PASS').length,fail:r.filter(x==='PASS').length,total:r.length}))}).catch(e=,e.message))
                                                         ^
Expression expected

SyntaxError: Unexpected token ','
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.15.0
